# agentflow-cli

./: .coveragerc  .gitignore  .pre-commit-config.yaml  ActionPlan.md  CLAUDE.md  Dockerfile  EVAL_CLI_PLAN.md  FILE_UPLOAD_GUIDE.md  FILE_UPLOAD_IMPLEMENTATION.md  IMPLEMENTATION_SUMMARY.md  MANIFEST.in  Makefile  README.md  SECURITY.md  SECURITY_ACTION_PLAN.md  SECURITY_REVIEW.md  STORE_TESTS_SUMMARY.md  TODOD.txt  Task2.md  agentflow.json  api_check.py  cli.py  coverage_report.txt  demo_file_upload.py  docker-compose.yml  example_weather_agent.py  mkdocs.yaml  plan.md  pyagenity.json  pyproject.toml  quick_test.py  req.txt  requirements.txt  test.py  test_cli.py  test_invoke.py  test_minimal.py  test_super_minimal.py  text.py
.github/workflows/: ci.yaml  release.yml
agentflow_cli/: __init__.py  cli.py
agentflow_cli/cli/: __init__.py  constants.py  exceptions.py  logger.py  main.py
agentflow_cli/cli/commands/: __init__.py  a2a.py  api.py  build.py  eval.py  init.py  skill.py  skills.py  test.py  version.py
agentflow_cli/cli/core/: config.py  output.py
agentflow_cli/cli/templates/: agentflow_skill.md  defaults.py  skills.py
agentflow_cli/cli/templates/prod/: .env.example  .pre-commot-config.yaml  agentflow.json  pyproject.toml
agentflow_cli/cli/templates/prod/auth/: agent_auth.py
agentflow_cli/cli/templates/prod/evals/: user_simulator_eval.py  weather_agents.py  weather_agents_eval.py
agentflow_cli/cli/templates/prod/graph/: agent.py  state.py  thread_name_generator.py
agentflow_cli/cli/templates/prod/graph/nodes/: __init__.py  main_node.py  tool_node.py
agentflow_cli/cli/templates/prod/graph/tools/: weather_tool.py
agentflow_cli/cli/templates/prod/graph/utils/: tool_decision.py
agentflow_cli/cli/templates/prod/graph/validators/: lifecyle.py  manager.py  validators.py
agentflow_cli/cli/templates/prod/tests/: conftest.py  test_agent_eval.py  test_catalog_tools.py  test_fashion_agent_eval.py  test_graph_nodes.py
agentflow_cli/media/: __init__.py  _compat.py  extractor.py  pipeline.py
agentflow_cli/src/app/: loader.py  main.py
agentflow_cli/src/tests/: __init__.py  test_cli_api_env.py  test_cli_commands_core.py  test_cli_commands_ops.py  test_cli_version.py  test_init_prod.py  test_router_ping.py  test_utils_parse_and_callable.py
docs/: authentication.md  authorization.md  cli-guide.md  cli.md  configuration.md  deployment.md  rate-limit-review.md  rate-limiting.md  thread-name-generator.md  unique-features-verification.md
examples/currency_agent/: agentflow.json  graph.py
examples/security/: README.md  api_key_auth.py  jwt_auth_example.py  rbac_authorization.py
examples/security/production_config/: .env.production.example  README.md  agentflow.json  docker-compose.yml  nginx.conf
graph/: __init__.py  dummy_store.py  react.py  thread_name_generator.py
ideas/: Idea.md
pyagenity_api/: Dockerfile  cli.py
pyagenity_api/cli/: main.py
pyagenity_api/cli/commands/: __init__.py  init.py
pyagenity_api/cli/templates/: defaults.py
pyagenity_api/src/app/: loader.py  main.py
scripts/: generate_docs.py
src/app/: loader.py  main.py  worker.py
src/app/db/: __init__.py  setup_database.py
src/app/routers/: setup_router.py
src/app/tasks/: user_tasks.py
src/app/utils/: response_helper.py
src/tests/: __init__.py
src/tests/fake_data/: fake_user_repo.py
src/tests/integration_tests/: test_auth_apis.py  test_main.py
src/tests/task_tests/: setup.py  (+1 more)
test_isolated/: test_pytest.py
tests/: STORE_TESTS_VISUAL_SUMMARY.txt  api_check.py  quick_test.py  test_multimodal_sprint2_extraction.py  test_sprint4_media_api.py  test_utils_parse_and_callable.py
tests/cli/: test_cli_api_env.py  test_cli_commands_core.py  test_cli_commands_ops.py  test_cli_eval.py  test_cli_main.py  test_cli_version.py  test_eval_command.py  test_eval_discovery.py  test_eval_flat_pool.py  test_init_prod.py  test_router_ping.py  test_skill_command.py  test_skills.py  test_test_command.py  test_utils_parse_and_callable.py  test_utils_response_helper.py  test_utils_swagger_and_snowflake.py
tests/integration_tests/: test_checkpointer_api.py  test_ping.py
tests/unit_tests/: test_api_command.py  test_callable_helper.py  test_checkpointer_router.py  test_checkpointer_service.py  test_cli_config_manager.py  test_cli_logger.py  test_cli_output.py  test_cli_validation.py  test_error_sanitization.py  test_file_upload.py  test_fix_graph.py  test_general_and_user_exceptions.py  test_graph_config.py  test_graph_router.py  test_graph_service.py  test_handle_errors.py  test_loader.py  test_log_sanitizer.py  test_main.py  test_media_router.py  test_parse_output.py  test_permissions.py  test_permissions_auth.py  test_rate_limit.py  test_request_limits.py  test_resource_exceptions.py  test_response_helper.py  test_security_config.py  test_security_headers.py  test_sentry_config.py  test_setup_middleware.py  test_setup_router.py  test_snowflake_id_generator.py  test_store_router.py  test_swagger_helper.py  test_thread_name_generator.py  test_websocket_auth.py  test_websocket_graph.py  test_websocket_guard.py  test_websocket_realtime.py
ui/: Frotnend Guidline.md
(+132 files in other folders)
