[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Weather Agent APP"
version = "1.0.0"
description = "A Weather Agent application built with AgentFlow."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12"
authors = [
    {name = "Your Name", email = "you@example.com"},
]
dependencies = [
    "10xscale-agentflow",
    "10xscale-agentflow-cli",
    "google-genai",
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "pytest-env",
]

[tool.ruff]
line-length = 100
target-version = "py312"
lint.fixable = ["ALL"]
lint.select = [
    "E", "W", "F", "PL", "I", "B", "A", "S", "ISC", "ICN", "PIE", "Q",
    "RET", "SIM", "TID", "RUF", "YTT", "UP", "C4", "PTH", "G", "INP", "T20",
]
lint.ignore = [
    "UP006", "UP007", "RUF012", "G004", "B904", "B008", "ISC001",
]
lint.dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
exclude = ["venv/*"]

[tool.ruff.lint.per-file-ignores]
"*/tests/*.py" = ["S101", "T201"]
"*/__init__.py" = ["E402", "S101"]

[tool.ruff.lint.isort]
lines-after-imports = 2

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.bandit]
skips = ["B101"]

[tool.pytest.ini_options]
env = ["ENVIRONMENT=pytest"]
testpaths = ["tests"]
pythonpath = ["."]
filterwarnings = ["ignore::DeprecationWarning"]
addopts = [
    "--cov=graph", "--cov-report=html", "--cov-report=term-missing",
    "--cov-report=xml", "--cov-fail-under=0", "--strict-markers", "-v"
]

[tool.coverage.run]
source = ["graph"]
branch = true
omit = [
    "*/__init__.py", "*/tests/*", "*/venv/*", "*/.venv/*",
]

[tool.coverage.report]
exclude_lines = [
    "if __name__ == '__main__':", "pragma: no cover", "@abstractmethod",
    "raise NotImplementedError",
]
show_missing = true
